# ChangeLog for net-misc/tor
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.471 2015/03/30 09:49:28 ago Exp $

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> tor-0.2.5.11.ebuild:
  Stable for sparc, wrt bug #544226

  25 Mar 2015; Anthony G. Basile <blueness@gentoo.org> tor-0.2.5.11.ebuild:
  Stable on arm, ppc and ppc64.  Bug #544226.

*tor-0.2.6.6 (25 Mar 2015)

  25 Mar 2015; Anthony G. Basile <blueness@gentoo.org> +tor-0.2.6.6.ebuild,
  -tor-0.2.6.3_alpha.ebuild:
  Version bump 2.6 branch.

  24 Mar 2015; Agostino Sarubbo <ago@gentoo.org> tor-0.2.5.11.ebuild:
  Stable for x86, wrt bug #544226

  24 Mar 2015; Agostino Sarubbo <ago@gentoo.org> tor-0.2.5.11.ebuild:
  Stable for amd64, wrt bug #544226

*tor-0.2.5.11 (20 Mar 2015)
*tor-0.2.6.5_rc (20 Mar 2015)

  20 Mar 2015; Anthony G. Basile <blueness@gentoo.org> +tor-0.2.5.11.ebuild,
  +tor-0.2.6.5_rc.ebuild, -files/tor.initd-r6, -tor-0.2.4.25.ebuild,
  -tor-0.2.6.2_alpha-r1.ebuild:
  Version bump upstream stable.  Bump alpha to new rc.  Remove older unstables.

*tor-0.2.6.3_alpha (08 Mar 2015)

  08 Mar 2015; Anthony G. Basile <blueness@gentoo.org>
  +tor-0.2.6.3_alpha.ebuild:
  Version bump alpha.

  28 Feb 2015; Andrew Savchenko <bircoph@gentoo.org> metadata.xml:
  seccomp USE flag is now global, removing from metadata

  09 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  tor-0.2.6.2_alpha-r1.ebuild:
  Keyword ~mips and ~x86

  08 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  tor-0.2.6.2_alpha-r1.ebuild:
  Keyword ~arm ~ppc ~ppc64

  08 Jan 2015; Anthony G. Basile <blueness@gentoo.org> -tor-0.2.4.23.ebuild:
  Remove older stable

*tor-0.2.6.2_alpha-r1 (06 Jan 2015)

  06 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  +tor-0.2.6.2_alpha-r1.ebuild, -tor-0.2.6.2_alpha.ebuild:
  Remove libsystemd automagic, bug #535812

  03 Jan 2015; Anthony G. Basile <blueness@gentoo.org> tor-0.2.6.2_alpha.ebuild: