@@ -10,28 +10,32 @@ AUX tor.service 479 SHA256 647572301c444896c6958af4481f443e39f7232f0ad919e4a154a
 AUX torrc-r1 140 SHA256 6766943a69e4784d02f173b5d74b8eb9345f878ef4eb36edab34bbf649ef2738 SHA512 6e3c481b34f2cb6f48bf87fe10565daded00415cc233332d43e18206d46eb7b32f92c55035584b5992e7a056e79e862124a573a9724f7762f76d4c4f0824de82 WHIRLPOOL 14a0e40219457b3ea26113fca561db338fb7324c20fee3b30287315974975001fab3cd3272932a1325e8dc9a227e0242bedf9fb424e2c5db755112f3fdeb815d
 DIST tor-0.2.5.10.tar.gz 3166480 SHA256 b3dd02a5dcd2ffe14d9a37956f92779d4427edf7905c0bba9b1e3901b9c5a83b SHA512 0e6522964ac84231f7753ebe80239ce8c906c62bd35e5bd65ae5f85f246d488e32fbf121c58e501cbf0b8271468f6c10bef756080a7120479240486d6af22a8f WHIRLPOOL e92d2805d134e3fd45e5bc0a1832b793555dc185a6bd6418d622adf447a430bd9932a4bbbbade1b0aa8c19ae05f0e8ea04b1100e3cdba22b2dc2260f2e5f9ec1
 DIST tor-0.2.5.11.tar.gz 3310350 SHA256 aee0faee9c3f1bb265ee8e94b4bb93967413f3c56e65f954db16b09451546769 SHA512 2f752c089e4e85273729dedc849b17f1009c0348370faecd22ff77b125a2afadcb31f6ef2f2b83201a53b9f663deaaf052e07eb8742707b16e14d757c2a74f2c WHIRLPOOL 450153c8b60a8fb48c727186c5c250c803253155e19d066d62687a15274dbd0204bb729d2881597275b06620cbbdec9c20a73d93af00c927529dfb929bc45cea
+DIST tor-0.2.5.12.tar.gz 3311423 SHA256 550fdafffeb4c1e3035bb8cc42e6e49d5af17ad79563bd118af22c1107f72b49 SHA512 67f78a9bb07987b311bd25548ea96cfc91d89dc8bfd29f284b77ab97b9dcb7d9a0f6e6cc0d1e4a2517653c42b3064aa7506227ebf339f56ad3d8f2ebad9258a0 WHIRLPOOL bd217c21318cf775bbf57c7df11b58c48f273d11db2057bb6071971aaa2744c3a910024011141f63cc3d99f7fc1b616e810d348709b5de6f3a84d8926e3f8b36
 DIST tor-0.2.6.5-rc.tar.gz 3593796 SHA256 1a78bc971078c8aee1d0927bf6629610efef2cce31219580b2a73cc268d4103e SHA512 7f56455a7d7f5d5a3d462a04cf80de1812e814f26cb29aa5413c68966ff6135c46442a2397e1350c11debbc8d8c40c7767654a360a43f45ab671cc1ed6faee1e WHIRLPOOL d39c4887d2ea75622a2679b6519c9d874e3cea0bbe214865a92ad9beb42841a4210202d2bef5bf27623f6de793816a6d3f36512faf53fc52d79ef10a5c20bfd3
 DIST tor-0.2.6.6.tar.gz 3594452 SHA256 c3349e457c71b8e5c138c656927b2bbca0bfa03539ffee8579b0e568ffb10283 SHA512 46e7a832a5690d92664bd746431e2b0f35acd349d13cf4ea48157fbdaec852042501467a4c1a8ac5e76506bb388c0b7feb1e8292d6d4f7dbf7040f16407fb7ea WHIRLPOOL ea0a8afa71c25edfc3428ba8535b5679c7f203f5d4984d93bc14091bcb9bdd275d96cd177da61b4df267d049cd1d121e32abc889a6267b7f076f69033d3fac0e
+DIST tor-0.2.6.7.tar.gz 3595669 SHA256 8c2be88a542ed1b22a8d3d595ec0acd0e28191de273dbcaefc64fdce92b89e6c SHA512 96e3cb5bcafddb1655663091ecf08f708213e47529d9701d67256e88d5fc2e70acffc6c062df6b8f0f4a4e3ef3d0dda76b5127ef9eeee06371ce0a66e53815b0 WHIRLPOOL 5da1f3e2ed1c12a1efba3eee91016beeaa5c40434831e684bb33670ae301e1661096c4a4231cd345c5dd833e8547f71f0c28d22c6d4b51a43bd0d6603160973c
 EBUILD tor-0.2.5.10-r3.ebuild 2836 SHA256 655ec36da0b6abc88060d5c62af20ff62edd97503c10a00e7812e5b4be992288 SHA512 c4b2d9f4050a48f5a3ed051b7c9d2f03c1cf5b03de58bf8a93f8b032323bd78373457de203fb86a9ed037e8e7abc744abbdc1813f785b9c3b5b6acb40142e8ad WHIRLPOOL a36c8abc6a7708f3b51b1bf271d086b882c2a49b980a10a3de2bac11b4afbf3aa5c12827c522a35ababb7654e34a00c31c00bfc5e2bbce338c1e0540214360ac
 EBUILD tor-0.2.5.11.ebuild 2833 SHA256 2c55fb57b7dcf142fd8bd1006d800909f752069f287eccd375f913dfc7380ab8 SHA512 97a981323806ce47b78f72ae4d0aa3a4f7b5391c829157ea1353450e1a821b42d98d731d91a480320f29f785742147b5c5616bd56e953d8bf36a70ebc06d5b5a WHIRLPOOL c8defc976b22ab5da934d02f5127f287fbcc358c115fde7b737ea309162e80ed2104f6b61306c33ca7dcd57c4a20540a294b89b0e87e255dc7eb1a7ba35e771c
+EBUILD tor-0.2.5.12.ebuild 2844 SHA256 d81c51799d7ac562a2b21f71730123b292e551a6e91c3db90f7f728f4214f3e4 SHA512 662ff7dcb6d5949641cba3118829838e577eaa934a2105d1dcbf1619b1bcbb79600e7d59d5fb6802dbf88620fe85d04c4a1876142787533834d5de4e767e83b9 WHIRLPOOL 074a32c2d4c8d9edd9528a8880a8df233683ab7aaef85dc4234e68bad1a4ceac0e3248ff40e9351465b00c499d44dc7621ebaaa23fd583965ee09c68adfdaacb
 EBUILD tor-0.2.6.5_rc.ebuild 2851 SHA256 95d6cc27f21aa995555e2b022c50fba3661e92ee125199dcb08df9bef03da0a0 SHA512 1cb064a7802d2278114a270315df3f2e3a96ecbd3070713ab045e04eb9e27964ed6643b4c2770524dfbcf0e51d4679e10b8d3f4119ba499e838fcfd7cab86373 WHIRLPOOL c2e24d080f98fe6856776a6f0bb074c2fbc1a9269da5d6bf8f2509dfad1577feb945492ee4a2d99d950c44d3512c449e5b7e52eb000d8335f70feaf8c381e6c1
 EBUILD tor-0.2.6.6.ebuild 2874 SHA256 5c0c4e3691e411e3bb4e4763a59f713c1ec8d92d2336cc297a6cd4a390f7ed25 SHA512 82a16ffad16ae7061ecd02c7c5119f032a957be10efdcb75c578eb0eff49751daa307bc4c8f22274b4b11dda811e1db24103a4abf1c971c7760410e2be47d999 WHIRLPOOL 3decdd3b53297a30264c3cf95dcd2c5dec40d63c8a2711bdf3a62dde03e2a6cd252fd653c7671ea2feaa0bcdce27af0ad9607cf1e08b2cfd6342a9072fc325b5
-MISC ChangeLog 70443 SHA256 7509c611d2702438f398c1f686016cef6b89cddfc8c15824188d1067e0b77521 SHA512 c128741e26999293ccdbb8fa24873144bbb57bc495da0f64c05b9e46129b46d9f681d79608b6ab6525d4eeefd2e604ec2abd7bd532b9b6004a9f8f628f1179e9 WHIRLPOOL 61cb7292cb59b9ad5164cba82261475b3edb8e57096dd8b94fb781fcf96f43059e1ae96974d1084866f06114d73fbc781708c04ddba2f70d21963d417312afce
+EBUILD tor-0.2.6.7.ebuild 2874 SHA256 ec78a8259dca0b024591b05456190bee6817a394bc07b8ae5508417e25826b0c SHA512 f4ae26074324abd0e370fb214006520ddc14506eaa4f04255e6c0fa6720871a659de65ad59ef17b35aed89b3e52addb61df4c3a17c4d4ae5412ba2de154a2889 WHIRLPOOL 508caeeaa86377fd1ca7d6f33a461b73da70659a57b1e6d2fd2f5b76c380c57bc9a3ed5309b66c9e4d7156d59afb813ca595749d4e8444a52c3df163de207a0d
+MISC ChangeLog 70622 SHA256 8b7e06265e4b260477828301a375b86ab8a70cd46da6e027d96da10c1ca08483 SHA512 fef48bbf62d3fb5116d70e14b70c978ba9963df8da7798d3c4c6abc422af1110ebbe0da7f4f40ea835d9e97aa36d84e17e0e08e9d5481e867f1845d23b6b2fec WHIRLPOOL 1f0e1aa60c44901217ebaad7a6a8af33b5a838cbdfb9c9beb26f0b4d1a86e6c6775c0a869ba87a60f8516db7ff4ab93281839d1652d6f1ebc87324e5045f6154
 MISC metadata.xml 889 SHA256 9467f665011b14aa6f8069e25d9093f6391df5f712114ce8e77ba21c3506b176 SHA512 9540206e53c4bc6a26cc0b7bda614c3d2a783935a7bb62e9ee378e8fe781feb4bba974ce986ef4112eb8cf85964749208d7cb6dc91baaae8f39120829a6ad6a6 WHIRLPOOL b0535e8563f7ed43bf35eead29fdcc89b1cd639e21a059019de6545c3e5117d92328b0def15f1515b0a6d90579bccb21de64d051d71d4c52d77c6869f7efa31e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVGRwpAAoJELp701BxlEWffTgP/2KreBZZom3l4+/eS8dNSTOh
-xl50INUDMQ3igk0Cmw/6kAXPyXaYmkom2002WQ6iHLRrfOYHzIjHpMRhdgS4HF2G
-TEyw0aS+huOM+7q9ugpdhmKMDpjGRTJMraGRCSbNb+5Zpih/ec5JOVmOyRXxrQPv
-2807Ut7VMwD4DkErNHvaIxBFWhMKd6qqYRg6bB0qqssfSUKfTppndQ+46sRQJr0W
-khBkWQJSf3OTCy1I5HzSX5SUA5V27N3xwngXSCCWFTYkRESjx0uIyy3+OVdIzQeP
-jbBupMmB/xIS6L5HS0qQWFZS4Kw2rWBSG6a10VXjZ9Ze09Cv9Xt3R4FI+r6WZEMQ
-3y6Iy06DULB0MJQ7gbByHbrGxe0bkdgw+Fhvico7DWU4cf/iKBxFtcjdnkjFF0I8
-mzuHLYDWVybk/0myI3a/E1mu6s6sXvwIynyz4KzpVKjEmVjhs0+Oq0JWIZBER6KU
-U3FJs9PwJGp2flphaitl6SD5WcH+wybqmuR8EK7FpeNbLJl5386HVAGkcUp9EBbE
-FuYOytH/MsfysxYOgQivANKXuBx1UqbQgh0nd3Y38cfT7ZO/d9gEqxpLD44LI6w1
-baTgypptoQr6svUqkOZRSVNVykquE2rS1Ms4FTXTYekmz0E75Y/4kEfnZhznGiC1
-NudSqFO9D45Hc8KDI1+/
-=Jx7q
+iQIcBAEBCAAGBQJVJGV3AAoJEJOE+m71LUu6AhIP/AjsnHrbXyF/1t9LI7D8ntE5
+hFzwab78RLtwDgaffiXduN+vZviATrKVNNS+45GeIF69MzIrZ6VAvmbXh67O7mG3
+6OCamQ7zG8FvqDDMLXgfr/nHRVU83so3gn0Ke0lPbEsrf+WA2DR6ihWXjJO+N1yg
+tTtrEhZ7TlauEo3wcsbeBo2+hZyUv+zIYsVKEJRQIq7uGhFZRckajF074mD8e3nI
+3Kgxx27eUaWONZbbJYnEPc9L/IMMYOXRVNbO4c30InslIDdt5fOZL7UelAHzCXFs
+BbXKEtI9vfGBXjuQVxTSPzTVkmUevyM/ICftoeJXeAa7fM+K/F/QVh/H9tNuwb77
+J9T1K3PPQnEATcrXOERllz0S9kq1OTd2cUYWOaOIM4rN6b2DISQi4gDCQnN4O6+2
+3RuikrKr9UhrY5fI4GvO9ofiYiaFdxHyMb/GkerbnPo2MRqZP6yhTyRC2elN4pjp
+wE4cr7uRD9nA0pSjGTN8yBs0ZFmuNyrn+Ps2MHdbYhUy9/U12v3TO7EaV19SI323
+HzPMpIDwI9yMZ5yZT9UW3rd6V7gTjEuKuAixRVEmE0wH75bggWwjiqf798y4/eHM
+sQaoZlSrCkul7uWlIOZj+o/+KUMwkE745TVx+xpI85BrX6tyF9/o+w5QY6Gt3MiN
+lOKKcME3b3bQyapTpqet
+=emsv
 -----END PGP SIGNATURE-----
