@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/tor
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.471 2015/03/30 09:49:28 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.472 2015/04/07 23:15:04 blueness Exp $
+
+*tor-0.2.5.12 (07 Apr 2015)
+*tor-0.2.6.7 (07 Apr 2015)
+
+  07 Apr 2015; Anthony G. Basile <blueness@gentoo.org> +tor-0.2.5.12.ebuild,
+  +tor-0.2.6.7.ebuild:
+  Version bumps.
 
   30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> tor-0.2.5.11.ebuild:
   Stable for sparc, wrt bug #544226
